# misis2023f-22-04-gavrilyuk-a-v

./: .gitignore  CMakeLists.txt  README.md  codeforces.id  status.md
bin.dbg/: 0001a.ilk  0004a.ilk  0069a.ilk  0279b.ilk  0371c.ilk  0455a.ilk  0478c.ilk  0514a.ilk  0550c.ilk  0777a.ilk  0777b.ilk  1141a.ilk  1520b.ilk  1526c1.ilk  1722c.ilk  1791b.ilk
docs/: report.md
prj.codeforces/: 0001a.cpp  0004A.cpp  0004a.cpp  0069a.cpp  0279b.cpp  0371c.cpp  0455a.cpp  0478c.cpp  0514a.cpp  0550c.cpp  0580b.cpp  0777a.cpp  0777b.cpp  1141a.cpp  1520B.cpp  1520b.cpp  1526c1.cpp  1722c.cpp  1722С.cpp  1791B.cpp  CMakeLists.txt
prj.cw/: CMakeLists.txt  core.cpp  loadIMG_createMasks.cpp  main.cpp  prj_test.cpp  test1.cpp  threshold.cpp  two_bin_methods.cpp  withListfiles.cpp
prj.cw/ImageProcessor/: CMakeLists.txt  ImageProcessor.cpp
prj.cw/ImageProcessor/include/ImageProcessor/: ImageProcessor.hpp
prj.cw/testconfigs/: config_1.json  config_2.json  config_3.json
